se crea carpeta de img

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </nav>
             </div>
             <div class="imgbanner">
-                <img src="maxresdefault.jpg" alt="fondo">
+                <img src="./img/maxresdefault.jpg" alt="fondo">
             </div>
         </header>
         <div class="container">
